# hagen_indoor_planner

hagen_indoor_sim/: CMakeLists.txt  package.xml
hagen_indoor_sim/img/: cartographer_depth_camera_3d.lua
hagen_indoor_sim/launch/: cartographer_depth_camera_3d.launch  cititruck_sim.launch  dji_mapping.launch  hagen_indoor_sim.launch  path_smoother.launch  planner.launch
hagen_indoor_sim/param/: costmap_common_params.yaml
hagen_indoor_sim/rviz/: navigation.rviz
hagen_indoor_sim/urdf/: pioneer3dx.xacro  pioneer3dx_body.xacro  pioneer3dx_wheel.xacro
hagen_indoor_sim/worlds/: hagen.world  hagen_empty.world
hagen_robot/base_local_planner/: CMakeLists.txt
hagen_robot/base_local_planner/src/: trajectory_planner.cpp  trajectory_planner_ros.cpp
hagen_robot/hagen_control/: CMakeLists.txt  package.xml
hagen_robot/hagen_control/config/: control.yaml  robot_localization.yaml
hagen_robot/hagen_control/launch/: control.launch  teleop.launch
hagen_robot/hagen_description/: CMakeLists.txt  package.xml
hagen_robot/hagen_description/launch/: description.launch
hagen_robot/hagen_description/meshes/: base_new.dae  base_new.stl
hagen_robot/hagen_description/urdf/: accessories.urdf.xacro  custom_example.urdf  empty.urdf  hagen.gazebo  hagen.urdf.xacro
hagen_robot/hagen_description/urdf/accessories/: bridge_plate.urdf.xacro  camera_mount.urdf.xacro  hokuyo_ust10.urdf.xacro  novatel_smart6.urdf.xacro  novatel_smart7.urdf.xacro  sick_lms1xx_mount.urdf.xacro  stereo_camera_mount.urdf.xacro  vlp16_mount.urdf.xacro
hagen_robot/hagen_description/urdf/base/: forklift_base.urdf.xacro  magni_base.urdf.xacro  magni_sign_base.urdf.xacro  omnibot_base.urdf.xacro  quadrotor_base.urdf.xacro  turtlebot3_burger.urdf.xacro
hagen_robot/hagen_description/urdf/configs/: base  base.bat  front_bumblebee2  front_bumblebee2.bat  front_flea3  front_flea3.bat  front_laser  front_laser.bat
hagen_robot/hagen_description/urdf/manipulators/: open_manipulator.urdf.xacro
hagen_robot/hagen_description/urdf/sensors/: lds_lfcd.urdf.xacro  leap_motion.urdf.xacro  rplidar_a2.urdf.xacro  sick_tim.urdf.xacro  sonar_sensor.urdf.xacro  sweep.urdf.xacro  vive_tracker.urdf.xacro
hagen_robot/hagen_description/urdf/wheels/forklift/: drive_wheel_assembly.gazebo.xacro  drive_wheel_assembly.urdf.xacro  support_wheel.urdf.xacro
hagen_robot/hagen_description/urdf/wheels/magni/: drive_wheel.urdf.xacro
hagen_robot/hagen_description/urdf/wheels/omnibot/: mecanum_wheel.urdf.xacro
hagen_robot/hagen_description/urdf/wheels/turtlebot3/: drive_wheel.urdf.xacro
hagen_robot/hagen_gazebo/: CMakeLists.txt  package.xml
hagen_robot/hagen_gazebo/launch/: spawn_hagen.launch
hagen_robot/hagen_indoor_msgs/: CMakeLists.txt  package.xml
hagen_robot/hagen_indoor_msgs/msg/: Drive.msg  Feedback.msg  Status.msg
hagen_robot/libs_extra/orunav_conversions/: package.xml
hagen_robot/libs_extra/orunav_conversions/include/orunav_conversions/: conversions.h
hagen_robot/libs_extra/orunav_generic/: CMakeLists.txt
hagen_robot/libs_extra/orunav_generic/include/orunav_generic/: path_utils.h
hagen_robot/libs_extra/orunav_motion_planner/: CMakeLists.txt
hagen_robot/libs_extra/orunav_motion_planner/include/orunav_motion_planner/: DiscWorldVisualizer.h
hagen_robot/libs_extra/orunav_motion_planner/src/: ARAStarPathPlanner.cpp  AStarPathPlanner.cpp  DiscWorldVisualizer.cpp  PathFinder.cpp  VehicleMission.cpp  World.cpp  WorldParameters.cpp  exercise01.py  exercise01_v1.py  exercise02.py  get_path_client.cpp  get_path_service.cpp
hagen_robot/libs_extra/orunav_mpc/: CHANGELOG.rst  package.xml
hagen_robot/libs_extra/orunav_mpc/src/: controller.cpp
hagen_robot/libs_extra/orunav_msgs/: CMakeLists.txt
hagen_robot/libs_extra/orunav_msgs/msg/: GetPolygonConstraintsPub.msg
hagen_robot/libs_extra/orunav_rviz/include/orunav_rviz/: orunav_rviz.h
hagen_robot/libs_extra/orunav_trajectory_processor/: CMakeLists.txt
hagen_robot/libs_extra/orunav_vehicle_execution/: CMakeLists.txt  package.xml
hagen_robot/libs_extra/orunav_vehicle_execution/include/orunav_vehicle_execution/: acado_tools.h  hagen_vehicle_execution_node.h  orunav_vehicle_execution_node.h  path_planner.h  path_smoother_dynamic.h  trajectory_generation.h  trajectory_processor_naive.h  trajectory_processor_naive_ct.h  vehicle_state.h
hagen_robot/libs_extra/orunav_vehicle_execution/src/: hagen_vehicle_execution_node.cpp  orunav_vehicle_execution_node.cpp  orunav_vehicle_execution_node_old.cpp  path_planner.cpp  path_smoother_dynamic.cpp
hagen_robot/navfn/: CMakeLists.txt  package.xml
hagen_robot/navfn/include/navfn/: acado_tools.h  navfn_ros.h  path_planner.h  path_smoother_dynamic.h  reeds_shepp_ros.h  trajectory_processor_naive.h  validity_checker.h
hagen_robot/navfn/src/: acado_test.cc  navfn_node.cpp  navfn_ros.cpp  path_planner.cpp  path_smoother_dynamic.cpp  reeds_shepp_ros.cpp  validity_checker.cpp
